# libapparatus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
libapparatus/: __init__.py  jsonrpc2.py  main.py  ws_client.py
libls/: __init__.py  main.py
test/: G917_settings.xml  G917_settings_2.xml  test_libapparatus.py  test_libls.py
