[tool.poetry]
name = "libapparatus"
version = "0.1.0"
description = "libray used in the apparatus project"
authors = ["Konstantin Koslowski <konstantin.koslowski@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.9"
xdg = "^6.0.0"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.7"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
